<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/constrint_layout_id"
    android:background="@color/colorbody"
    tools:context=".Faq">

    <androidx.cardview.widget.CardView
        android:layout_width="358dp"
        android:layout_height="660dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/faq"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </ImageView>

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="28dp"
                    android:text="@string/What_Is_Stegonography"
                    android:textColor="@color/textcolor"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.092"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView4">

                </TextView>

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/Stegonography_details"
                    android:textColor="@color/textcolor"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="0.022"
                    tools:layout_editor_absoluteX="55dp">

                </TextView>


                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="250dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/What_Is_Cryptography"
                    android:textColor="@color/textcolor"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.092"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView7"
                    app:layout_constraintVertical_bias="0.06">

                </TextView>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Cryptography_details"
                    android:textColor="@color/textcolor"
                    android:textSize="10sp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:layout_constraintVertical_bias="0.057"
                    tools:layout_editor_absoluteX="16dp">

                </TextView>

                <TextView
                    android:id="@+id/textView12"
                    android:layout_marginTop="15dp"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Threads"
                    android:textColor="@color/textcolor"
                    android:textSize="18sp"
                    android:layout_marginLeft="10dp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:layout_constraintVertical_bias="0.067">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Threads_details"
                    android:textColor="@color/textcolor"
                    android:textSize="10sp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="15dp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView12"
                    app:layout_constraintVertical_bias="0.062"
                    tools:layout_editor_absoluteX="52dp">

                </TextView>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>