<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorbody"
    android:layout_height="match_parent"
    tools:context=".cryptofun.C_Decription_page_one">


    <EditText
        android:id="@+id/editText"
        android:layout_width="332dp"
        android:layout_height="176dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/inputshape"
        android:hint="@string/Enter_Message"
        android:textAlignment="center"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="35dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        app:layout_constraintVertical_bias="0.119"
        tools:layout_editor_absoluteX="0dp">

   <EditText
       android:textColorHint="@color/whitecolor"
       android:id="@+id/keyid"
       android:textSize="20sp"
       android:inputType="textPassword"
       android:layout_weight="1"
       android:layout_width="0dp"
       android:hint="@string/Key"
       android:textColor="@color/whitecolor"
       android:textAlignment="center"
       android:background="@drawable/buttonshape"
       android:layout_height="match_parent">

   </EditText>
        <Button
            android:id="@+id/decrypt"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@drawable/buttonshape"
            android:layout_width="0dp"
            android:text="@string/Decrypt"

            android:textColor="@color/whitecolor"
            android:textSize="25sp"
            android:layout_height="match_parent">

        </Button>

    </LinearLayout>

    <ImageView
        android:id="@+id/homeid"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>